create endpoints for fight module
